welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: not found: value vuBiscuit
    if (vuBiscuit){
        ^Program:4: error: not found: value True
      return True
             ^Program:7: error: not found: value False
  return False
         ^