welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {for(compteur <- 1 to 6){
    avance()
    if (vuBiscuit){
      return True
    }
  }
  return False
}
